moving stuff around

--- a/src/Assignment_2_V2.ipynb
+++ b/src/Assignment_2_V2.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,21 +13,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install torchmetrics"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "-h5JlZQn9H99",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-h5JlZQn9H99",
         "outputId": "761a345b-9c7f-4f74-b7e9-b5df95470249"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting torchmetrics\n",
             "  Downloading torchmetrics-1.3.2-py3-none-any.whl (841 kB)\n",
@@ -104,6 +85,9 @@
             "Successfully installed lightning-utilities-0.11.1 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-8.9.2.26 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.19.3 nvidia-nvjitlink-cu12-12.4.99 nvidia-nvtx-cu12-12.1.105 torchmetrics-1.3.2\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install torchmetrics"
       ]
     },
     {
@@ -229,12 +213,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget http://www.manythings.org/anki/fra-eng.zip\n",
-        "!unzip -o fra-eng.zip\n",
-        "!mkdir data\n",
-        "!mv fra.txt data/eng-fra.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -242,11 +221,10 @@
         "id": "AUGpVT3MC9ZA",
         "outputId": "f9d3deac-733b-43e6-c297-2705a4a025e6"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2024-03-26 05:20:15--  http://www.manythings.org/anki/fra-eng.zip\n",
             "Resolving www.manythings.org (www.manythings.org)... 173.254.30.110\n",
@@ -264,10 +242,21 @@
             "  inflating: fra.txt                 \n"
           ]
         }
+      ],
+      "source": [
+        "!wget http://www.manythings.org/anki/fra-eng.zip\n",
+        "!unzip -o fra-eng.zip\n",
+        "!mkdir data\n",
+        "!mv fra.txt data/eng-fra.txt"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RZKd8K4BfBM1"
+      },
+      "outputs": [],
       "source": [
         "from __future__ import unicode_literals, print_function, division\n",
         "from io import open\n",
@@ -305,12 +294,7 @@
         "import torch.nn.functional as F\n",
         "\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
-      ],
-      "metadata": {
-        "id": "RZKd8K4BfBM1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -327,6 +311,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WtFJGPPytPV4"
+      },
+      "outputs": [],
       "source": [
         "# Turn a Unicode string to plain ASCII, thanks to\n",
         "# http://stackoverflow.com/a/518232/2809427\n",
@@ -344,12 +333,7 @@
         "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
         "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
         "    return s"
-      ],
-      "metadata": {
-        "id": "WtFJGPPytPV4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -367,6 +351,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AVZyk7glkhZ2"
+      },
+      "outputs": [],
       "source": [
         "def readLangs(lang1, lang2, reverse=False):\n",
         "    print(\"Reading lines...\")\n",
@@ -388,12 +377,7 @@
         "        output_lang = Lang(lang2)\n",
         "\n",
         "    return input_lang, output_lang, pairs"
-      ],
-      "metadata": {
-        "id": "AVZyk7glkhZ2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -413,6 +397,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8t1N5cYalfJS"
+      },
+      "outputs": [],
       "source": [
         "MAX_LENGTH = 15\n",
         "\n",
@@ -434,12 +423,7 @@
         "\n",
         "def filterPairs(pairs):\n",
         "    return [pair for pair in pairs if filterPair(pair)]"
-      ],
-      "metadata": {
-        "id": "8t1N5cYalfJS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -458,6 +442,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YnGQl472lg0-",
+        "outputId": "0f36edc9-7f7d-49ff-ed96-509a610f290b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reading lines...\n",
+            "Read 229803 sentence pairs\n",
+            "Trimmed to 22708 sentence pairs\n",
+            "Counting words...\n",
+            "Counted words:\n",
+            "fra 6986\n",
+            "eng 4611\n"
+          ]
+        }
+      ],
       "source": [
         "def prepareData(lang1, lang2, reverse=False):\n",
         "    input_lang, output_lang, pairs = readLangs(lang1, lang2, reverse)\n",
@@ -476,76 +483,53 @@
         "\n",
         "input_lang, output_lang, pairs = prepareData('eng', 'fra', True)\n",
         "#print(random.choice(pairs))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YnGQl472lg0-",
-        "outputId": "0f36edc9-7f7d-49ff-ed96-509a610f290b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading lines...\n",
-            "Read 229803 sentence pairs\n",
-            "Trimmed to 22708 sentence pairs\n",
-            "Counting words...\n",
-            "Counted words:\n",
-            "fra 6986\n",
-            "eng 4611\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Tt6luSw3ym6k"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X = [i[0] for i in pairs]\n",
-        "y = [i[1] for i in pairs]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "R50-9amYytmD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X = [i[0] for i in pairs]\n",
+        "y = [i[1] for i in pairs]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Ej3a3AvYyoI1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_pairs = list(zip(X_train,y_train))\n",
-        "test_pairs = list(zip(X_test,y_test))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "X-69f4nmy5ph"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_pairs = list(zip(X_train,y_train))\n",
+        "test_pairs = list(zip(X_test,y_test))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -607,6 +591,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "O0aZQW30liTF"
+      },
+      "outputs": [],
       "source": [
         "class EncoderRNN(nn.Module):\n",
         "    def __init__(self, input_size, hidden_size):\n",
@@ -624,12 +613,7 @@
         "\n",
         "    def initHidden(self):\n",
         "        return torch.zeros(1, 1, self.hidden_size, device=device)"
-      ],
-      "metadata": {
-        "id": "O0aZQW30liTF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -668,6 +652,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DNY63vmP7pZT"
+      },
+      "outputs": [],
       "source": [
         "class Decoder(nn.Module):\n",
         "    def __init__(self, hidden_size, output_size):\n",
@@ -690,12 +679,7 @@
         "\n",
         "    def initHidden(self):\n",
         "        return torch.zeros(1, 1, self.hidden_size, device=device)"
-      ],
-      "metadata": {
-        "id": "DNY63vmP7pZT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -724,6 +708,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WrWHiE1RLtCz"
+      },
+      "outputs": [],
       "source": [
         "def indexesFromSentence(lang, sentence):\n",
         "    return [lang.word2index[word] for word in sentence.split(' ')]\n",
@@ -739,12 +728,7 @@
         "    input_tensor = tensorFromSentence(input_lang, pair[0])\n",
         "    target_tensor = tensorFromSentence(output_lang, pair[1])\n",
         "    return (input_tensor, target_tensor)"
-      ],
-      "metadata": {
-        "id": "WrWHiE1RLtCz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -782,6 +766,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CvKmiwlnLtFf"
+      },
+      "outputs": [],
       "source": [
         "teacher_forcing_ratio = 0.5\n",
         "\n",
@@ -835,12 +824,7 @@
         "    decoder_optimizer.step()\n",
         "\n",
         "    return loss.item() / target_length"
-      ],
-      "metadata": {
-        "id": "CvKmiwlnLtFf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -856,6 +840,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4Wb3PO24LwhG"
+      },
+      "outputs": [],
       "source": [
         "import time\n",
         "import math\n",
@@ -873,12 +862,7 @@
         "    es = s / (percent)\n",
         "    rs = es - s\n",
         "    return '%s (- %s)' % (asMinutes(s), asMinutes(rs))"
-      ],
-      "metadata": {
-        "id": "4Wb3PO24LwhG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -901,6 +885,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7mPu4xWzLx-O"
+      },
+      "outputs": [],
       "source": [
         "def trainIters(encoder, decoder, epochs, print_every=1000, plot_every=100, learning_rate=0.01):\n",
         "    start = time.time()\n",
@@ -936,12 +925,7 @@
         "                                            iter, iter / n_iters * 100, print_loss_avg))\n",
         "\n",
         "            iter +=1"
-      ],
-      "metadata": {
-        "id": "7mPu4xWzLx-O"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -963,6 +947,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tCrTcoH0L04g"
+      },
+      "outputs": [],
       "source": [
         "def evaluate(encoder, decoder, sentence, max_length=MAX_LENGTH):\n",
         "    with torch.no_grad():\n",
@@ -996,12 +985,7 @@
         "            decoder_input = topi.squeeze().detach()\n",
         "\n",
         "        return decoded_words"
-      ],
-      "metadata": {
-        "id": "tCrTcoH0L04g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1017,6 +1001,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XoYOvTaOL4oI"
+      },
+      "outputs": [],
       "source": [
         "def evaluateRandomly(encoder, decoder, n=10):\n",
         "    for i in range(n):\n",
@@ -1027,15 +1016,15 @@
         "        output_sentence = ' '.join(output_words)\n",
         "        print('<', output_sentence)\n",
         "        print('')"
-      ],
-      "metadata": {
-        "id": "XoYOvTaOL4oI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1DWJXsfd2q4A"
+      },
+      "outputs": [],
       "source": [
         "from torchmetrics.text.rouge import ROUGEScore\n",
         "from tqdm import tqdm\n",
@@ -1092,12 +1081,7 @@
         "    print(\"Rouge2 recall:  \\t\",metric_score[\"rouge2_recall\"])\n",
         "    print(\"=====================================\")\n",
         "    return input,gt,predict,metric_score"
-      ],
-      "metadata": {
-        "id": "1DWJXsfd2q4A"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1127,13 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "hidden_size = 512\n",
-        "encoder1 = EncoderRNN(input_lang.n_words, hidden_size).to(device)\n",
-        "decoder1 = Decoder(hidden_size, output_lang.n_words).to(device)\n",
-        "\n",
-        "trainIters(encoder1, decoder1, 2, print_every=5000)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1141,11 +1119,10 @@
         "id": "bzMeJbVDL6Un",
         "outputId": "dab447ba-4af6-4dec-d98a-af287fa9851b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch: 0/2\n",
             "1m 19s (- 9m 31s) (5000 12%) 3.2219\n",
@@ -1159,25 +1136,29 @@
             "10m 42s (- 0m 14s) (40000 97%) 1.5096\n"
           ]
         }
+      ],
+      "source": [
+        "hidden_size = 512\n",
+        "encoder1 = EncoderRNN(input_lang.n_words, hidden_size).to(device)\n",
+        "decoder1 = Decoder(hidden_size, output_lang.n_words).to(device)\n",
+        "\n",
+        "trainIters(encoder1, decoder1, 2, print_every=5000)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "evaluateRandomly(encoder1, decoder1)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "gc2y_EGQUT-c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "gc2y_EGQUT-c",
         "outputId": "95ce4243-39ab-4b85-e91d-36b5dd7f655c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "> j ai fait celle la .\n",
             "= i made that one .\n",
@@ -1221,32 +1202,32 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "evaluateRandomly(encoder1, decoder1)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "input,gt,predict,score = test(encoder1, decoder1, train_pairs)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "mcJQDHJ2-96c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mcJQDHJ2-96c",
         "outputId": "d1c261a2-dfe0-4a5f-e96e-59169c50e734"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 20437/20437 [02:49<00:00, 120.83it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "=== Evaluation score - Rouge score ===\n",
             "Rouge1 fmeasure:\t 0.6784335\n",
@@ -1258,32 +1239,32 @@
             "=====================================\n"
           ]
         }
+      ],
+      "source": [
+        "input,gt,predict,score = test(encoder1, decoder1, train_pairs)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "input,gt,predict,score = test(encoder1, decoder1, test_pairs)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "F81S9tbV6vtL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "F81S9tbV6vtL",
         "outputId": "2706a9fc-6a7e-4659-e89f-2fa832ce8955"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 2271/2271 [00:19<00:00, 119.03it/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "=== Evaluation score - Rouge score ===\n",
             "Rouge1 fmeasure:\t 0.61922604\n",
@@ -1295,16 +1276,35 @@
             "=====================================\n"
           ]
         }
+      ],
+      "source": [
+        "input,gt,predict,score = test(encoder1, decoder1, test_pairs)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "WuacX-OHHNnU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
